ensure only admins can change the templates, but let all users use the templates
